--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MindMate",
+  "name": "mindmate",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -17,9 +17,11 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.4.0",
     "babel-plugin-macros": "^3.1.0",
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "draft-js": "^0.11.7",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,6 +29,7 @@
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
+    "@types/draft-js": "^0.11.14",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
