--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
