Add view functionality for note preview

--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "date-fns": "^2.30.0",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
+    "draft-js-import-html": "^1.4.1",
+    "draftjs-to-html": "^0.9.1",
     "express": "^4.18.2",
+    "html-to-draftjs": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -31,6 +34,8 @@
   },
   "devDependencies": {
     "@types/draft-js": "^0.11.14",
+    "@types/draftjs-to-html": "^0.8.3",
+    "@types/html-to-draftjs": "^1.4.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
