--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "draft-js-import-html": "^1.4.1",
     "draftjs-to-html": "^0.9.1",
     "express": "^4.18.2",
+    "firebase": "^10.6.0",
     "html-to-draftjs": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
