--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "draft-js-export-html": "^1.4.1",
     "draft-js-import-html": "^1.4.1",
     "draftjs-to-html": "^0.9.1",
+    "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "firebase": "^10.6.0",
     "html-to-draftjs": "^1.5.0",
